# custom_esp32s3_smartwatch

./: README.md
Projects/01_simulation_macOS/lv_port_pc_vscode/: CMakeLists.txt  lv_conf.h  simulator.code-workspace
Projects/01_simulation_macOS/lv_port_pc_vscode/config/: FreeRTOSConfig.h
Projects/02_esp32s3/3d_casing/: Case.stp
Projects/02_esp32s3/esp32s3_smartwatch/: sdkconfig  sdkconfig.old
Projects/02_esp32s3/esp32s3_smartwatch/main/: CMakeLists.txt  main.c
Projects/02_esp32s3/porting_to_latest_lvgl/: sdkconfig  sdkconfig.old
Projects/02_esp32s3/touchscreen/: sdkconfig
Projects/03_waveshare_demos/smartwatch_demo/: platformio.ini
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/: CMakeLists.txt
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_CLK/: app_clk.c  app_clk.h
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_COMMON/: app_common.c  app_common.h
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_CTRL_PANEL/: app_ctrl_panel.c  app_ctrl_panel.h
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_MAIN/: app_main.c
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_SETTINGS/: app_settings.c  app_settings.h
Projects/older_versions/v1_0_0/02_esp32s3/old_esp32s3_smartwatch/components/LIB_APP/APP_THEME/: app_theme.c
Projects/v1_0_1/02_esp32s3/: CMakeLists.txt  sdkconfig
Projects/v1_0_1/02_esp32s3/main/: CMakeLists.txt  (+2 more)
(+144 files in other folders)
